# CSJEffectCollection

./: .gitignore  CMakeLists.txt  OpenGLDemos.sln  README.md
Debug/coordsystem/: texture.frag
Debug/shaders/: texture.vs
OpenGLDemos/: OpenGLDemos.vcxproj
opengl_coordsystem/: opengl_coordsystem.cpp  opengl_coordsystem.vcxproj  opengl_coordsystem.vcxproj.filters
opengl_rectangle/: ReadMe.txt  Resource.h  opengl_rectangle.cpp  opengl_rectangle.rc  opengl_rectangle.vcxproj  opengl_rectangle.vcxproj.filters  stdafx.cpp
opengl_shader/: opengl_shader.cpp  opengl_shader.vcxproj  opengl_shader.vcxproj.filters
opengl_texture/: Shader.h  opengl_texture.cpp  opengl_texture.vcxproj  opengl_texture.vcxproj.filters
opengl_triangle/: opengl_triangle.cpp  opengl_triangle.vcxproj  opengl_triangle.vcxproj.filters
shaders/ConeWithTex/: fragmentShader.glsl
shaders/Image3D/: fragmentShader.glsl  vertexShader.glsl
shaders/StackGraphicShaders/: fragmentShader.glsl
shaders/animationShaders/: fragmentShader.glsl  vertexShader.glsl
shaders/cubeShaders/: vertexShader.glsl
shaders/gradientTriangle/: fragmentShader.glsl  vertexShader.glsl
shaders/imageShaders/: fragmentShader.glsl  vertexShader.glsl
shaders/instanceShaders/: fragmentShader.glsl  vertexShader.glsl
shaders/pointShaders/: fragmentShader.glsl
shaders/rectangle/: vertexShader.glsl
shaders/shadowShaders/: renderFragmentShader.glsl  renderVertexShader.glsl  shadowVertexShader.glsl
shaders/sphereShaders/: fragmentShader.glsl
shaders/torusShaders/: blinnPhongVertexShader.glsl  blinnPhongfragmentShader.glsl  fragmentShader.glsl  gouraudFragmentShader.glsl  gouraudVertexShader.glsl  phongFragmentShader.glsl  phongVertexShader.glsl  vertexShader.glsl
shaders/triangleShaders/: vertexShader.glsl
src/Graphics/: GraphicBaseFactory.cpp  GraphicCommonData.h  GraphicModelImporter.cpp  GraphicModelImporter.h  GraphicProgram.cpp  GraphicProgram.h  GraphicShapeBase.cpp  GraphicShapeBase.h  GraphicShapePyramid.cpp  GraphicShapePyramid.h  GraphicShapeSphere.cpp  GraphicShapeSphere.h  GraphicShapeTorus.cpp  GraphicShapeTorus.h  GraphicsAnimation.cpp  GraphicsAnimation.h  GraphicsBase.cpp  GraphicsBase.h  GraphicsCamera.cpp  GraphicsCamera.h  GraphicsConeWithTex.cpp  GraphicsConeWithTex.h  GraphicsCube.cpp  GraphicsCube.h  GraphicsGradientTriangle.cpp  GraphicsGradientTriangle.h  GraphicsHeader.h  GraphicsImage3D.cpp  GraphicsImage3D.h  GraphicsImageTexture.cpp  GraphicsImageTexture.h  GraphicsInstance.cpp  GraphicsInstance.h  GraphicsPoint.cpp  GraphicsPoint.h  GraphicsRectangle.cpp  GraphicsRectangle.h  GraphicsShadow.cpp  GraphicsShadow.h  GraphicsSphere.cpp  (+7 more)
src/Utils/: utils.cpp  utils.h
src/common/: common.cpp  common.hpp
src/main/: OpenGLPipeLine.cpp  framework.h
src/shapes/: Sphere.cpp
